# handler/listOpenings.go
@@ -9,15 +9,14 @@ import (
 
 // @BasePath /api/v1
 
-// @Summary      List Opening
-// @Description  List a job opening
-// @Tags         opening
+// @Summary      List Openings
+// @Description  List all job openings
+// @Tags         Openings
 // @Accept       json
 // @Produce      json
 // @Success      200      {object}  ListOpeningsResponse
-// @Failure      400      {object}  ErrorResponse
-// @Failure      404      {object}  ErrorResponse
-// @Router       /opening [get]
+// @Failure      500      {object}  ErrorResponse
+// @Router       /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
